minor layout issue with current speaker & time offset

--- a/css/app.less
+++ b/css/app.less
@@ -24,6 +24,7 @@ body {
         .form-inline {
             .form-group {
                 padding-bottom: 5px;
+                display: block;
                 
                 label {
                     width: 15%;
@@ -32,7 +33,7 @@ body {
                 }
                 
                 select, input {
-                    width: 75%;
+                    max-width: 75%;
                 }
             }
         }
